# NFO

./: .gitignore  README.md  TODO  TODO.md  __init__.py  auth.py  chat_agent.py  database.py  default.nix  deploy.sh  flake.nix  gunicorn.conf.py  helper.py  pyproject.toml  requirements.txt  server.py  shell.nix
.github/workflows/: deploy.yaml
app/: __init__.py  auth.py  cache.py  chat_agent.py  database.py  helper.py  logger.py  terms_extractor.py
app/modules/auth/: __init__.py  model.py  route.py  service.py
app/modules/conversation/: __init__.py  model.py  route.py  service.py
app/modules/generate/: __init__.py  model.py  route.py  service.py  utils.py
app/utils/: __init__.py  auth.py  config.py  decorator.py  helper.py
collections/Onotology BE/: Health Check.bru  bruno.json
collections/Onotology BE/Archives/: Request CQs.bru
collections/Onotology BE/Auth/: Get logged-in user profile.bru  Login.bru
collections/Onotology BE/Competency Questions/: Save Competency Qeustions Copy.bru  Save Competency Qeustions.bru  Validate a CQ.bru
collections/Onotology BE/Conversation/: Create a new prompt per conversation id.bru  Get conversation detail by conversation id.bru  Get user-s conversations.bru
collections/Onotology BE/Important Terms Exctractor/: Generate Classes and Properties.bru  Upload pdf.bru  Upload url.bru
collections/Onotology BE/environments/: Local.bru
collections/ontology_be/: Health Check.bru  bruno.json
collections/ontology_be/Archives/: Generate Classes and Properties.bru  Generate facets of properties.bru  (+2 more)
(+55 files in other folders)
