[tool.poetry]
name = "ontology-be"
version = "0.1.0"
description = "the backend for Nusantara Food Ontology project"
authors = ["Hidayat Taufiqur <hidayattaufiqur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-openai = "^0.1.3"
langchain-core = "^0.1.45"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"
flask = {extras = ["async"], version = "^3.0.3"}
flask-login = "^0.6.3"
google-auth = "^2.29.0"
google-auth-oauthlib = "^1.2.0"
python-dotenv = "^1.0.1"
openai = "^1.23.2"
langchain = "^0.1.16"
langchain-postgres = "^0.0.3"
psycopg-binary = "^3.1.18"
psycopg-pool = "^3.2.1"
llmsherpa = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
